--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "mime": "^2.4.6",
+    "multer": "^1.4.2",
+    "sqlite3": "^5.0.0"
   }
 }
