--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/YeeunJ/TProject#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "child_process": "^1.0.2",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
