--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/YeeunJ/TProject#readme",
   "dependencies": {
+    "bindings": "^1.5.0",
     "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
     "ejs": "^3.1.3",
@@ -25,6 +26,7 @@
     "fs": "0.0.1-security",
     "mime": "^2.4.6",
     "multer": "^1.4.2",
+    "node-addon-api": "^3.0.0",
     "sqlite3": "^5.0.0"
   }
 }
